--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,12 +6,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Tech Blog</title>
   {{!-- <link rel="stylesheet" href="/css/jass.css"> --}}
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 
 <body>
-  <header class="display-flex justify-space-between align-center p-2">
+<header class="text-bg-primary p-3">
+<nav class="navbar navbar-expand-lg text-bg-primary">
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link active" aria-current="page" href="#">Home</a>
+        <a class="nav-link" href="#">Dashboard</a>
+        <a class="nav-link" href="#">Login</a>
+        <a class="nav-link" href="#">Logout</a>
+      </div>
+    </div>
+  </div>
+</nav>
     <h1>
-      User Registry
+      The Tech Blog
     </h1>
     <!-- Only display the logout button if the user is logged in -->
     {{!-- {{#if logged_in}}
@@ -31,6 +47,7 @@
   {{!-- {{#if logged_in}}
   <script src="/js/logout.js"></script>
   {{/if}} --}}
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 
 </html>
